@@ -35,6 +35,7 @@ version <next>:
 - PVF demuxer
 - subtitles filter
 - IRCAM muxer/demuxer
+- Paris Audio File demuxer
 
 
 version 1.0:
